	* enum.ml*: [( // )] added
	* std.ml*: [( // )] renamed [( /// )]
	* std.ml*: [args], [exe] added
	* pa_openin.ml: [module_with_init], [module_init], [one_or_more_modules], [add_initialization] added
	* pa_openin_r.ml: created
	* pa_batteries/: created
	* file.ml*: [lines_of] added
	* IO.ml: [close_at_end], [make_enum] created
	* IO.ml: [*_of] now uses [make_enum]
	
10/07/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batteries_type_conv.mli: [get_conv_path_el], [set_conv_path],
	[push_conv_path], [pop_conv_path], [gen_derived_defs], [sig_generate],
	[gen_derived_sigs]
	* batteries_type_conv.mli: obsoleted
	* pa_type_conv.ml: removed 
	* pa_where: created
	* build/META: [pa_where] added
	* build/threads/META:
	* build/nothreads/META: [requires] added [camlp4]
	* batteries.ml (both): [Pa_type], [Toolchain.Boilerplate.Type_conv] removed
	* bitSet.ml: [TYPE_CONV_PATH] added
	* bitSet.ml: [intern_of_sexp], [sexp_of_intern] added
	* bitSet.ml: [type t] [with sexp] added
	* dllist.ml*: [TYPE_CONV_PATH], [with sexp] added
	* dynArray.ml*: [TYPE_CONV_PATH], [with sexp], [serialization] added
	* extArray.ml*: [TYPE_CONV_PATH], [with sexp] added
	* extBig_int.ml*: [TYPE_CONV_PATH], [with sexp] added
	* extChar.ml*: [TYPE_CONV_PATH], [with sexp] added
	* extComplex.ml*: [TYPE_CONV_PATH], [with sexp] added
	* extFloat.ml*
	* extHashtbl.ml*:
	* extInt.ml*:
	* extInt32.ml*:
	* rope.ml*:
	* result.ml*:
	* refList.ml*:
	* ref.ml*:
	* pMap.ml*:
	* option.ml*:
	* lazyList.ml*:
	* extUnit.ml*:
	* extString.ml*:
	* extNum.ml*:
	* extNativeint.ml*:
	* extList.ml*:
	* extInt64.ml*:
	* extRandom.ml*
	* batlib_Baselib_Buffer.ml*:
	* IO.ml*: merged Thelema's Unicode changes
	* Rope.ml*: merged Thelema's Unicode changes
	* UTF8.ml*: merged Thelema's Unicode changes
	* result.ml*: replaced [Error] with [Bad]
	* UTF8.mli: [concat], [join], [copy_set] added
	* UTF8.ml*: becomes [ExtUTF8]
	* extlib.mlpack: [ExtUTF8] replaces [UTF8]
	* extlib.mlpack: [ExtUChar] replaces [UChar]