@@ -1,8 +1,8 @@
 Package: godi-batteries
 Version: 0.1
 Revision: 8
-Depends: godi-ocaml (>= 3.10.2), godi-findlib (>= 1.2), type-conv, camomile (>= 0.7)
-Build-Depends: godi-findlib (>= 1.2), type-conv
+Depends: godi-ocaml (>= 3.10.2), godi-findlib (>= 1.2), type-conv, camomile (>= 0.7), sexplib (>= 3.7.0)
+Build-Depends: godi-findlib (>= 1.2), type-conv, sexplib (>= 3.7.0)
 Sources: http://www.univ-orleans.fr/lifo/Members/David.Teller/software/batteries/batteries-0.1.tgz
 Homepage: http://forge.ocamlcore.org/projects/batteries/
 Maintainer: David Teller <David.Teller@univ-orleans.fr>
