@@ -83,5 +83,6 @@ package "bin_prot" (
 package "syntax" (
 	version     = "20081007"
 	description = "Standard syntax extensions to the OCaml language, full package (requires Camlp4 >= 3.10)"
-	requires    = "batteries.pa_openin.syntax,batteries.pa_type_conv.syntax,batteries.pa_where.syntax,sexplib.syntax,batteries.bin_prot.syntax"
+	requires    = "batteries.pa_openin.syntax,batteries.pa_where.syntax,batteries.pa_batteries.syntax"
+	requires(boilerplate) = "type-conv.syntax,bin_prot.syntax"
 )
