@@ -1,0 +1,156 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+<link rel="stylesheet" href="api/style.css" type="text/css">
+<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type">
+<link rel="Start" href="root.html">
+<link title="Index of modules" rel=Appendix href="root_modules.html">
+<link title="Batteries" rel="Chapter" href="Batteries.html"><title>OCaml Batteries Included</title>
+</head>
+<body>
+<center><h1>Language extensions introduced in Batteries Included</h1></center>
+Several language extensions and convenience features are introduced in Batteries Included.
+To take advantage of these features, please see <a href="setup.html">the corresponding chapter</a>.
+Note that most of these extensions were not developed specifically for Batteries Included and may
+be used separately.
+
+<center><h2>Opening of modules</h2></center>
+<center>(activated by default, implemented as findlib package <code>batteries.pa_openin.syntax</code>)</center>
+<center><h3>Local opening of modules</h3></center>
+You can open local modules, inside an expression if needed.
+<br />
+For instance:
+<pre>
+open System.File in
+ (*Here, System.File is opened*)
+ lines_of "some_file"
+
+(*Here, System.File is not opened anymore*)
+</pre>
+These modules do not need to be named. For instance, you may write
+<pre>
+open Hashtbl.Make(String) in
+ (*...*)
+</pre>
+
+
+<center><h3>Initialization of modules</h3></center>
+As a convenience, you can specify an expression to be evaluated when opening a module.
+For instance,
+<pre>
+open Util.Random with self_init ()
+</pre>
+This extract is equivalent to
+<pre>
+open Util.Random
+let _ = self_init ()
+</pre>
+This feature is provided as it may sometimes increase readability.
+
+<center><h3>Opening several modules</h3></center>
+As a convenience, you can specify a comma-separated list of modules to be opened in one operation.
+For instance,
+<pre>
+open Data.Mutable, Data.Persistent
+</pre>
+This extract is equivalent to
+<pre>
+open Data.Mutable
+open Data.Persistent
+</pre>
+
+This feature is provided as it may sometimes increase readability.
+
+<center><h2>"where" construction</h2></center>
+<center>(activated by default, implemented as findlib package <code>batteries.pa_where.syntax</code>)</center>
+By default, OCaml provides a construction <code>let...in...</code>. This extension adds
+a dual construction <code>... where ...</code>, once again, to increase readability
+when appropriate. 
+<br />
+Where <code>let...in...</code> lets you define a value and use it immediately,
+<code>... where...</code> lets you use a value and define it immediately, as
+is often done in mathematic notations. Consider
+<pre>
+let fibo n = fst fibo_aux n
+  where rec fibo_aux = function
+    | 0 -> (1, 1)
+    | 1 -> (1, 2)
+    | n -> (a, a + b) where let (a, b) = fibo_aux ( n - 1 )
+</pre>
+This extract is equivalent to
+<pre>
+let fibo n =
+  let rec fibo_aux =
+    function
+    | 0 -> (1, 1)
+    | 1 -> (1, 2)
+    | n -> let (a, b) = fibo_aux (n - 1) in (a, (a + b))
+  in fst (fibo_aux n)
+</pre>
+
+More generally, <code>&lt;expression&gt; where &lt;definitions&gt;</code>
+is equivalent to <code>let &lt;definitions&gt; in &lt;expression&gt;</code>.
+Note that you can define (mutually) recursive functions with <code>where</code>
+just as well as with <code>let</code>.
+<br />
+
+<dl>
+<dt>Associativity</dt><dd> <code>a where b where c</code> is equivalent to <code>(a where b) where c</code></dd>
+<dt>Precedence</dt><dd> <code>let a = b where c and d</code> is equivalent to <code>let a = (b where c and d)</code></dd>
+</dl>
+
+<center><h2>Boiler-plate construction</h2></center>
+<center>(<i>de</i>activated by default, implemented as findlib package <code>sexplib.syntax</code>)</center>
+
+<center><h3>Serialization to S-Expressions</h3></center> 
+S-Expressions are a human-readable format for the transmission and
+storage of data, comparable to JSON. 
+<br />
+A new construction <code>with sexp</code> is added to type
+definitions. This construction may be used to automatically (or
+semi-automatically, if need arises) generate functions to transform
+values into S-Expressions.
+<br />
+Let us consider the following extract:
+<pre>
+TYPE_CONV_PATH "Current.Module.Name" (*Required*)
+
+type color = Spade
+           | Heart
+           | Club
+           | Diamond        with sexp
+
+type value = Number of int
+           | Ace
+           | King
+           | Queen
+           | Jack           with sexp
+
+type card = color * value   with sexp
+</pre>
+This extract defines types <code>color</code>, <code>value</code> and <code>card</code>,
+as well as functions:
+<pre>
+val sexp_of_color: color -> Batteries.Languages.SExpr.t
+val color_of_sexp: Batteries.Languages.SExpr.t -> color
+
+val sexp_of_value: value -> Batteries.Languages.SExpr.t
+val value_of_sexp: Batteries.Languages.SExpr.t -> value
+
+val sexp_of_card : card -> Batteries.Languages.SExpr.t
+val card_of_sexp : Batteries.Languages.SExpr.t -> card
+</pre>
+<br />
+Module <a href="api/Batteries.Languages.SExpr.html">Languages.SExpr</a>
+may be used to manipulate S-Expressions, to save them to files, load
+them from files, display them...
+<br />
+Most of the types known to Batteries Included are compatible with
+<code>with sexp</code>. If you encounter a type which is not compatible 
+with this boilerplate generator, you may define manually functions
+<code>sexp_of_foo</code> and <code>foo_of_sexp</code>. These functions
+will integrate nicely with the rest of S-Expressions.
+<br />
+For more information, see the manual of <a href="http://www.ocaml.info/ocaml_sources/sexplib310-4.2.0/README.txt">Sexplib</a>
+</body>
+</html>
