@@ -1,0 +1,106 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta name="generator" content=
+"HTML Tidy for Linux/x86 (vers 1 September 2005), see www.w3.org" />
+<link rel="stylesheet" href="api/style.css" type="text/css" />
+<style type="text/css">
+/*<![CDATA[*/
+  body {
+  padding: 3cm;
+  text-align:justify;
+  }
+/*]]>*/
+</style>
+<meta content="text/html; charset=us-ascii" http-equiv=
+"Content-Type" />
+<link rel="Start" href="root.html" />
+<link title="Index of modules" rel="Appendix" href=
+"root_modules.html" />
+<link title="Batteries" rel="Chapter" href="Batteries.html" />
+<title>OCaml Batteries Included</title>
+</head>
+<body>
+<center>
+<h1>Welcome!</h1>
+</center>
+A hearty welcome to OCaml Batteries Included. 
+
+<h1>What is OCaml Batteries Included?</h1> 
+
+<p>
+Twenty years ago, a language was just a compiler. You could measure
+the quality of a language from the beauty of its semantics, the
+clarity of its syntax, the speed of generated code. But that's not
+true anymore. Since then, the Java and .Net nuclear plants have been
+built, the Python and Ruby powerhouses have been inaugurated and they
+all have demonstrated that a language can only be as beautiful, clear
+and fast as the libraries which developers are actually going to use
+for their work.
+
+</p>
+<p>
+
+Unfortunately, from this point of view, OCaml lacks a bit of
+electricity: yes, libraries exist for treating Unicode, producing
+graphical interfaces, reading and writing XML, drawing in two or three
+dimensions, building distributed programs, network services or
+webservers, examining text, reading and writing images, combining
+parsers, sending, storing and receiving type-safe data, performing
+type analysis on complex languages, opening databases, generating
+other programming languages, interfacing with industrial
+platforms... But these libraries often don't work too well with each
+other. If you're starting with OCaml, the only thing you can rely on
+are a meager few functions on lists and strings. Oh, and
+although <code>try...finally...</code> has been part of the OCaml
+tutorial for ages, it's still not part of the language.
+
+</p>
+<p>
+
+Fortunately, the OCaml community is nothing if not resourceful.
+It has provided findlib to manage compile-time dependencies
+and OCamlBuild to automatize compilation, GODI to complement
+apt-get and yum and manage software installation and, when
+the language needs to be extended, the flexible Camlp4.
+
+
+</p>
+<p>
+
+Now is time to take all these tools and all the main libraries
+produced by the OCaml community and turn them into a consistent
+platform. That's OCaml Batteries Included.
+
+</p>
+<p>
+
+<div style="text-align:center">
+<div>
+<img src="../../batteries_large.png" />
+</div>
+(No animals injured)
+</div>
+
+
+<h1>What's inside?</h1>
+Essentially, OCaml Batteries Included consists in two components:
+<ul>
+ <li>Libraries, themselves consisting mostly in a small uniformization layer on top of chosen existing libraries.</li>
+ <li>Language extensions, themselves often consisting in chosen existing language extensions.</li>
+</ul>
+
+For more informations, follow us <a href="api/index.html">towards the manual</a>.
+
+<h1>Relations to other libraries</h1>
+<h2>Project Gallium's Base Library</h2>
+<h2>Jane Street's Core</h2>
+<h2>ExtLib</h2>
+<h2>OCamlNet</h2>
+
+<h1>Comparable projects, somewhere else</h1>
+<h2>Python Batteries Included</h2>
+<h2>Haskell Batteries Included</h2>
+</body>
+</html>
