@@ -26,14 +26,14 @@ take the following steps:
   <code>
       &lt;*&gt;: use_batteries
   </code></li>
-<li>in any source file which needs to take advantage of Batteries Included,
-  add <code>open Batteries</code></li>
 </ol>
 
-That should be it. For more informations on the contents of
-Batteries Included, please take a look at <a href="api/index.html" target="_top">the API documentation</a>.
+That should be it. For more informations on the contents of Batteries
+Included, please take a look at <a href="api/index.html"
+target="_top">the API documentation</a> and <a href="extensions.html">
+the set of language extensions introduced by Batteries</a>.
 
-<center><h2>More details</h2></center>
+<center><h2>More control</h2></center>
 File <a href="../myocamlbuild"><code>doc/batteries/myocamlbuild.ml</code></a>
 is an extension of OCamlBuild. It defines <emph>tags</emph>, which you
 may use in your projects to specify that your project should take
@@ -45,8 +45,58 @@ The tags defined by Batteries Included are:
 <dl>
 <dt>use_batteries</dt> <dd>Use Batteries Included both as a library and to extend the OCaml language.</dd>
 <dt>use_batteries_r</dt> <dd>Use Batteries Included both as a library and to extend the OCaml language -- in revised syntax.</dd>
-<dt>pkg_batteries</dt> <dd>Use Batteries Included both as a library and to extend the OCaml language.</dd>
+<dt>pkg_threads</dt><dd>Allow threading. Required to use module <code>Control.Concurrency.Threads</code>.</dd>
+<dt>pkg_batteries</dt> <dd>Use Batteries Included only as a
+    library. No language extension is involved.  To use the features
+    of Batteries Included with <code>pkg_batteries</code>, you need to start your
+    files with <code>open Batteries</code>.</dd>
+<dt>use_boilerplate</dt> <dd>Use only the syntax extensions necessary
+    to automatically generate boiler-plate code. These syntax extensions are
+    not added by default when performing <code>use_batteries</code> as they can suddenly
+    turn correct code into something which doesn't compile. Use tag
+    <code>use_boilerplate</code> in conjunction with either <code>use_batteries</code> or
+    <code>use_batteries_r</code>.</dd>
 </dl>
+
+To take advantage of a tag for a file or a set of files, you need to add this
+tag to a speciale file named <code>_tags</code>, placed in the same directory
+as your files. For instance, to have <code>my_file.ml</code> compiled with
+Batteries Included as a library and <code>my_other_file.ml</code> compiled
+with both the library, the language extensions and boiler-plate code, your
+file <code>_tags</code> should read:
+<pre>
+&lt;my_file.ml&gt;: pkg_batteries
+&lt;my_other_file.ml&gt;: use_batteries,use_boilerplate
+</pre>
+
+The order of lines doesn't matter, nor does the order of tags on one line. For
+more informations on <code>myocamlbuild.ml</code> and <code>_tags</code>, see
+<a href="http://brion.inria.fr/gallium/index.php/Ocamlbuild">the documentation
+of OCamlBuild</a>.
+
+<center><h2>Even more control</h2></center> During its installation,
+Batteries Included creates a set
+of <a href="http://projects.camlcity.org/projects/findlib.html">findlib</a>
+packages:
+
+<dl>
+<dt>batteries</dt> <dd>
+The main package for Batteries Included. In turn, this package defines subpackages
+   <dt>batteries.pa_openin.syntax</dt> <dd>A language extension adding new possibilities for the opening of modules.</dd>
+   <dt>batteries.pa_type_conv.syntax</dt> <dd>A language extension adding boiler-plate possibilities.</dd>
+   <dt>batteries.pa_where.syntax</dt> <dd>A language extension adding a construction <code>where</code> dual to <code>let</code>.</dd>
+   <dt>batteries.pa_batteries.syntax</dt> <dd>A language extension for automatically opening module <code>Batteries</code>.</dd>
+</dd>
+<dt>batteries_threads</dt> <dd>You will probably never need to manipulate this package yourself.
+It is automatically linked to your files when you use both package <code>batteries</code>
+and package <code>threads</code>.</dd>
+<dt>batteries_nothreads</dt> <dd>You will probably never need to manipulate this package yourself.
+It is automatically linked to your files when you use package <code>batteries</code>
+without using package <code>threads</code>.</dd>
+</dl>
+
+For more information on how to use these packages, please see the documentation of
+<a href="http://projects.camlcity.org/projects/findlib.html">findlib</a>.
 </body>
 </html>
 
